@@ -167,7 +167,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -450,7 +450,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -633,7 +633,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -852,7 +852,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1034,7 +1034,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1217,7 +1217,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1434,7 +1434,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1616,7 +1616,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1666,7 +1666,7 @@
 				<widget class="GtkEntry" id="terminal_exec_flag_entry">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1880,7 +1880,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -2059,7 +2059,7 @@
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
