@@ -1,3 +1,10 @@
+2007-07-12  Matthias Clasen  <mclasen@redhat.com>
+
+	* gnome-default-applications-properties.glade:
+	* gnome-da-capplet.c: Change the custom command entries to be
+	insensitive, instead of noneditable, unless we are a custom
+	command.  (#456308)
+
 2007-07-08  Jens Granseuer  <jensgr@gmx.net>
 
 	* Makefile.am:
